fixing formatted whatsapp message and trimming whitespaces and enabling age field

--- a/app/styles/Programs/Programs.module.css
+++ b/app/styles/Programs/Programs.module.css
@@ -158,6 +158,7 @@
 @media (max-width: 34em) {
   .imagePlaceholder {
     height: auto;
+    object-fit: cover;
   }
 }
 
